# cliply-exporter

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: backlog.md  plan.md  signing.md
site/: CNAME  README.md  index.html
src/: app.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: binaries.rs  download.rs  export.rs  lib.rs  main.rs  media.rs
src/components/: chrome.tsx  logo.tsx  osd.tsx  splash.tsx
src/i18n/: index.tsx  messages.ts
src/lib/: api.ts  db.ts  links.ts  sfx.ts  xml.ts
src/screens/: clips.tsx  export-dialog.tsx  home.tsx  import.tsx  setup.tsx
