[package]
name = "cliply-exporter"
version = "0.2.4"
description = "Cliply Exporter — open-source desktop clip cutter (YouTube + analysis XML in, MP4 clips out)."
edition = "2021"
license = "Apache-2.0"

[lib]
name = "cliply_exporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
log = "0.4"
tokio = { version = "1", features = ["process", "io-util", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
